--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi esse Evento?</h2>
+                    <h2>O que é esse Evento?</h2>
                     <p class="p-2">A Copa do Mundo é o maior torneio internacional de futebol, organizado pela FIFA (Federação Internacional de Futebol).
                          Ela acontece a cada quatro anos e reúne seleções de diferentes países para competir pelo título de melhor equipe do mundo.
-                          A competição é disputada em fases, começando com uma fase de grupos, seguida por eliminatórias até a grande final.</p>
+                        A competição é disputada em fases, começando com uma fase de grupos, seguida por eliminatórias até a grande final.</p>
                 </div>
             </div>
         </section>
