--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>O que é esse Evento?</h2>
+                    <p class="p-2">A Copa do Mundo é o maior torneio internacional de futebol, organizado pela FIFA (Federação Internacional de Futebol).
+                         Ela acontece a cada quatro anos e reúne seleções de diferentes países para competir pelo título de melhor equipe do mundo.
+                          A competição é disputada em fases, começando com uma fase de grupos, seguida por eliminatórias até a grande final.</p>
                 </div>
             </div>
         </section>
