--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="Argentina.jpg"
+                        <img src="img/Argentina.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
