--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
                 </div>
              </div>
         </section>
-        <h2>Galeria de Momentos</h2>
 
         <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
-            <h2 class="text-center pt-5">Galeria do Campeões</h2>
+            <h2 class="text-center pt-5">Galeria de Momentos</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
